{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 14,
  "lineage": "a74b837c-fe54-ee41-ba9a-fc343ffe5022",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:security-group/sg-054709aa3996ec3fc",
            "description": "create a sgroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054709aa3996ec3fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "security",
            "name_prefix": "",
            "owner_id": "839684713127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sssss"
            },
            "tags_all": {
              "Name": "sssss"
            },
            "timeouts": null,
            "vpc_id": "vpc-0237b5cc6599ba9d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:vpc/vpc-0237b5cc6599ba9d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-05b4090331fe9e4b6",
            "default_route_table_id": "rtb-00021e6cd99f43e5a",
            "default_security_group_id": "sg-053def4cd9ee1fae1",
            "dhcp_options_id": "dopt-0ea364480b0db7103",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0237b5cc6599ba9d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00021e6cd99f43e5a",
            "owner_id": "839684713127",
            "tags": {
              "Name": "vpc_security"
            },
            "tags_all": {
              "Name": "vpc_security"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:security-group-rule/sgr-03c715e3fc6f509c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03c715e3fc6f509c5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-054709aa3996ec3fc",
            "security_group_rule_id": "sgr-03c715e3fc6f509c5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sgroup",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:839684713127:security-group-rule/sgr-0705e447c026ddac9",
            "cidr_ipv4": "192.168.0.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0705e447c026ddac9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-054709aa3996ec3fc",
            "security_group_rule_id": "sgr-0705e447c026ddac9",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sgroup",
            "aws_vpc.vpc_security"
          ]
        }
      ]
    }
  ]
}